[gd_scene load_steps=14 format=3 uid="uid://ckbxxbpei0gui"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_ivc2f"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/Info/interaction_information.gd" id="2_64w2u"]
[ext_resource type="Texture2D" uid="uid://byprdtpeldk57" path="res://Textures/Buttons/X_button_normal.png" id="3_82uvy"]
[ext_resource type="Texture2D" uid="uid://dkay3mveblu0j" path="res://Textures/UI/Information/informationTile.png" id="3_cr600"]
[ext_resource type="FontVariation" uid="uid://jg507qhg14bj" path="res://Textures/Fonts/numbers.tres" id="4_ly7x4"]
[ext_resource type="Texture2D" uid="uid://x7kuuopqw4yl" path="res://Textures/Buttons/X_button_highlight.png" id="4_sw30l"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes_and_scripts/Components/button_sound_component.tscn" id="9_vl7rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_erdcx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bjjr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7oyg1"]

[sub_resource type="Shader" id="Shader_k1an3"]
code = "shader_type canvas_item;

global uniform sampler2D colour_scheme: filter_nearest;
uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;

		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}

		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);

			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a <= 0.0) == inside) {
				return true;
			}
		}
	}

	return false;
}

void fragment() {
	vec2 uv = UV;

	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));

		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;

		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}

	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
	COLOR = vec4(texture(colour_scheme, vec2(COLOR.r, COLOR.g)).rgb, COLOR.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsgce"]
shader = SubResource("Shader_k1an3")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="LabelSettings" id="LabelSettings_pdifg"]
font = ExtResource("4_ly7x4")
font_size = 17

[node name="InteractionInformation" type="Control" node_paths=PackedStringArray("grab_area") groups=["grabbable"]]
z_index = 6
z_as_relative = false
material = ExtResource("1_ivc2f")
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_64w2u")
grab_area = NodePath("PanelContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 156.0
offset_bottom = 35.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_erdcx")

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
material = ExtResource("1_ivc2f")
use_parent_material = true
layout_mode = 2
mouse_filter = 2
current_tab = 0
clip_tabs = false

[node name="Quantum Numbers" type="PanelContainer" parent="PanelContainer/TabContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bjjr6")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Quantum Numbers"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = -3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TabContainer/Quantum Numbers/MarginContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("3_cr600")
expand_mode = 1
stretch_mode = 1

[node name="Quantum Numbers" type="GridContainer" parent="PanelContainer/TabContainer/Quantum Numbers"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 7
theme_override_constants/v_separation = 1
columns = 4

[node name="name" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "NAME"
vertical_alignment = 2

[node name="before" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(28, 10)
layout_mode = 2
text = "BEFORE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="after" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(28, 10)
layout_mode = 2
text = "AFTER"
horizontal_alignment = 1
vertical_alignment = 2

[node name="space" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(3, 10)
layout_mode = 2
vertical_alignment = 2

[node name="Other" type="PanelContainer" parent="PanelContainer/TabContainer"]
visible = false
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7oyg1")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Other"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_right = -3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TabContainer/Other/MarginContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("3_cr600")
expand_mode = 1
stretch_mode = 1

[node name="Other" type="GridContainer" parent="PanelContainer/TabContainer/Other"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 1
columns = 3

[node name="name" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
text = "PROPERTY"

[node name="data" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2

[node name="space" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="NumberContainer" type="CenterContainer" parent="PanelContainer"]
use_parent_material = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="Number" type="Label" parent="PanelContainer/NumberContainer"]
material = SubResource("ShaderMaterial_hsgce")
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_pdifg")
horizontal_alignment = 2
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 5

[node name="CloseButton" type="TextureButton" parent="PanelContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_82uvy")
texture_pressed = ExtResource("4_sw30l")
texture_hover = ExtResource("4_sw30l")

[node name="ButtonSoundComponent" parent="PanelContainer/MarginContainer/CloseButton" instance=ExtResource("9_vl7rp")]
on_pressed = true

[connection signal="child_entered_tree" from="PanelContainer/TabContainer" to="." method="_on_tab_container_child_entered_tree"]
[connection signal="pressed" from="PanelContainer/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
